--- a/src/styles/Forums/personalinfo.css
+++ b/src/styles/Forums/personalinfo.css
@@ -11,8 +11,11 @@
     justify-content: center;
     align-items: center;
     margin: auto;
-    
-    
+}
+
+.css-1wc848c-MuiFormHelperText-root
+{
+    margin-left: 0;
 }
 
 
