--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,4 +3,9 @@
 * 
 {
     font-family: 'Source Sans Pro', sans-serif;
+    
+}
+.MuiFormLabel-root.MuiFo
+{
+    font-family: 'Source Sans Pro', sans-serif;
 }
